Test for  #346